--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,341 +1,262 @@
+@import "/home/mattia/.config/waybar/themes/colors.css";
 
-@keyframes blink-warning {
-    70% {
-        color: @light;
-    }
-
-    to {
-        color: @light;
-        background-color: @warning;
-    }
-}
-
-@keyframes blink-critical {
-    70% {
-      color: @light;
-    }
-
-    to {
-        color: @light;
-        background-color: @critical;
-    }
-}
-
-
-/* -----------------------------------------------------------------------------
- * Styles
- * -------------------------------------------------------------------------- */
-
-/* COLORS */
-
-/* Nord */
-@define-color bg #1E1E28;
-/*@define-color bg #353C4A;*/
-@define-color light #D8DEE9;
-/*@define-color dark @nord_dark_font;*/
-@define-color warning #ebcb8b;
-@define-color critical #BF616A;
-@define-color mode #434C5E;
-/*@define-color workspaces @bg;*/
-/*@define-color workspaces @nord_dark_font;*/
-/*@define-color workspacesfocused #434C5E;*/
-@define-color workspacesfocused #4C566A;
-@define-color tray @workspacesfocused;
-@define-color sound #EBCB8B;
-@define-color network #332E41;
-@define-color memory #546484;
-@define-color cpu #332E41;
-@define-color temp #332E41;
-@define-color layout #5e81ac;
-@define-color battery #332E41;
-@define-color date #332E41;
-@define-color time #332E41;
-@define-color backlight #332E41;
-@define-color nord_bg #332E41;
-@define-color nord_bg_blue #332E41;
-@define-color nord_light #D8DEE9;
-@define-color nord_light_font #D8DEE9;
-@define-color nord_dark_font #434C5E;
-@define-color status #332E41;
-@define-color network #332E41;
-
-/* Reset all styles */
+/* Download icons font: https://github.com/Templarian/MaterialDesign-Font */
 * {
-    border: none;
-    border-radius: 3px;
-    min-height: 0;
-    margin: 0.1em 0.2em 0.1em 0.2em;
+  font-family: Twemoji Regular, MiSans Regular, Material Design Icons Regular;
+  font-size: 14px;
 }
 
-/* The whole bar */
-#waybar {
-    background: transparent;
-    color: @light;
-    font-family: "Cantarell", "Font Awesome 5 Pro";
-    font-size: 12px;
-    font-weight: normal;
-		border-radius: 0px;
+/* Waybar */
+window#waybar {
+  background-color: rgba(30, 30, 46, 0.6);
+  color: @text;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  border-radius: 0px 0px 10px 10px;
 }
 
-/* Each module */
+/* Modules */
+#tray,
+#custom-media,
+#cpu,
+#memory,
+#backlight,
+#pulseaudio,
+#network,
+#bluetooth,
 #battery,
 #clock,
-#cpu,
-#custom-layout,
-#memory,
-#mode,
-#network,
-#pulseaudio,
-#temperature,
-#custom-alsa,
-#custom-pacman,
-#custom-weather,
-#custom-gpu,
-#tray,
-#backlight,
-#language,
-#custom-cpugovernor {
-    padding-left: 0.6em;
-    padding-right: 0.6em;
+#custom-sysmenu,
+
+#window {
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  margin-right: 2px;
+  transition-duration: 0.2s;
 }
 
-/* Each module that should blink */
-#mode,
-#memory,
-#temperature,
-#battery {
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-		margin-left: 0px;
-		margin-right: 0px;
-		border-radius: 0px 0px 0px 0px;
-		background: @status;
+/* Launcher */
+#custom-launcher {
+  background-color: pink;
+  color: @dark;
+  padding: 1px 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  margin-right: 2px;
+  transition-duration: 0.2s;
 }
 
-/* Each critical module */
-#memory.critical,
-#cpu.critical,
-#temperature.critical,
-#battery.critical {
-    color: @critical;
-}
-
-/* Each critical that should blink */
-#mode,
-#memory.critical,
-#temperature.critical,
-#battery.critical.discharging {
-    animation-name: blink-critical;
-    animation-duration: 2s;
-}
-
-/* Each warning */
-#network.disconnected,
-#memory.warning,
-#cpu.warning,
-#temperature.warning,
-#battery.warning {
-    background: @warning;
-    color: @nord_dark_font;
-}
-
-/* Each warning that should blink */
-#battery.warning.discharging {
-    animation-name: blink-warning;
-    animation-duration: 3s;
-}
-
-/* And now modules themselves in their respective order */
-
-#mode { /* Shown current Sway mode (resize etc.) */
-    color: @light;
-    background: @mode;
-}
-
-/* Workspaces stuff */
-
+/* Workspaces */
 #workspaces {
- /*   color: #D8DEE9;
-    margin-right: 10px;*/
+  margin-left: 2px;
+  margin-right: 2px;
+  transition-duration: 0.2s;
+}
+
+#workspaces button {
+  background-color: @surface0;
+  padding: 1px 8px;
+  color: @subtext;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 2px;
+  margin-right: 2px;
+  border-radius: 10px;
+  border: solid 1px;
+  border-color: @surface1;
+  transition-duration: 0.2s;
+}
+
+#workspaces button:hover {
+  background-color: @purple;
+  color: @dark;
+  border-color: @pink;
+  transition-duration: 0.2s;
+}
+
+#workspaces button.active {
+  padding: 1px 12px;
+  background-color: @pink;
+  color: @dark;
+  border-color: #d298fe;
+  transition-duration: 0.2s;
+}
+
+#workspaces button.focused {
+  background-color: @pink;
+  color: @dark;
+  border-color: #d298fe;
+  transition-duration: 0.2s;
 }
 
 #workspaces button.urgent {
-    border-color: #c9545d;
-    color: #c9545d;
-    opacity: 1;
+  background-color: @red;
+  color: @dark;
+  border-color: #eb4d4b;
+  transition-duration: 0.2s;
 }
 
-#window {
-    margin-right: 40px;
-    margin-left: 40px;
-    font-weight: normal;
-}
-#bluetooth {
-    background: @nord_bg_blue;
-    font-size: 1.2em;
-    font-weight: bold;
-    padding: 0 0.6em;
-}
-#custom-gpu {
-    background: @nord_bg;
-    font-weight: bold;
-    padding: 0 0.6em;
-}
-#custom-weather {
-    background: @mode;
-    font-weight: bold;
-    padding: 0 0.6em;
-}
-#custom-pacman {
-    background: @nord_light;
-    color: @nord_dark_font;
-    font-weight: bold;
-    padding: 0 0.6em;
-}
-#custom-scratchpad-indicator {
-    background: @nord_light;
-    color: @nord_dark_font;
-    font-weight: bold;
-    padding: 0 0.6em;
-}
-#idle_inhibitor {
-    background: @mode;
-    /*font-size: 1.6em;*/
-    font-weight: bold;
-    padding: 0 0.6em;
-}
-#custom-alsa {
-    background: @sound;
+/* Tray */
+#tray {
+  background-color: @surface1;
+  color: @dark;
+  border: solid 1px;
+  border-radius: 10px;
+  border-color: @surface2;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
-#network {
-    background: @network;
+#tray > .passive {
+  -gtk-icon-effect: dim;
 }
 
-#memory {
-    background: @memory;
+#tray > .needs-attention {
+  -gtk-icon-effect: highlight;
+  background-color: #eb4d4b;
 }
 
-#cpu {
-    background: @status;
-    color: #D8DEE9;
-		margin-right: 0px;
-		border-radius: 3px 0px 0px 3px;
-}
-#cpu.critical {
-    color: @nord_dark_font;
-}
-#language {
-    background: @nord_bg_blue;
-    color: #D8DEE9;
-    padding: 0 0.4em;
-}
-#custom-cpugovernor {
-    background-color: #3F5360;
-    color: @nord_dark_font;
-}
-#custom-cpugovernor.perf {
-    
-}
-#temperature {
-    background-color: @status;
-    color: #D8DEE9;
-		margin-right: 0px;
-		border-radius: 3px 0px 0px 3px;
-}
-#temperature.critical {
-    background:  @critical;
-}
-#custom-layout {
-    background: @layout;
+/* Custom Media */
+#custom-media {
+  color: @dark;
+  border: solid 1px;
+  border-radius: 10px;
+  border-color: @surface2;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
+#custom-media:hover {
+  border-width: 2px;
+  background-color: @mauve;
+  transition-duration: 0.2s;
+}
+
+#custom-media.playing {
+  border-color: #27b21b;
+  background-color: @green;
+  border-width: 1px;
+  transition-duration: 0.2s;
+}
+
+#custom-media.paused {
+  border-color: #eb4d4b;
+  background-color: @red;
+  border-width: 1px;
+  transition-duration: 0.2s;
+}
+
+/* Backlight */
 #backlight {
-    background: @status;
-	margin-left: 0px;
-	border-radius: 0px 3px 3px 0px;
+  background-color: #ffffff;
+  color: @dark;
 }
 
-#clock {
-    background: @nord_bg_blue;
-    color: #D8DEE9;
-}
-#clock.date {
-    background: @date;
-}
-
-#clock.time {
-    background: @mode;
-}
-
-#pulseaudio { /* Unsused but kept for those who needs it */
-    background: @status;
-    color: #D8DEE9;
-		margin-right: 0px;
-		margin-left: 0px;
-		border-radius: 0px 0px 0px 0px;
+/* Pulseaudio */
+#pulseaudio {
+  background-color: @surface1;
+  border: solid 1px;
+  border-radius: 10px;
+  border-color: @surface2;
+  color: #cccccc;
+  transition-duration: 0.2s;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
 #pulseaudio.muted {
-    background: @status;
-    color: #BF616A;
-    /* No styles */
-
-}
-#pulseaudio.source-muted {
-    background: @status;
-    color: #BF616A;
-    /* No styles */
-}
-#tray {
-    background: #434C5E;
-}
-#workspaces {
-    background: #1E1E28;
-    margin-left: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    border-radius: 0px;
+  background-color: @red;
+  border-color: #eb4d4b;
+  color: @dark;
+  transition-duration: 0.2s;
 }
 
-#workspaces button.active{
-		background: #332E41;
+/* Clock */
+#clock {
+  background-color: @pink;
+  color: @dark;
+  border-radius: 10px;
+  border: solid 1px;
+  border-color: #d298fe;
 }
 
-#taskbar {
-    margin-top: 0px;
-    margin-bottom: 0px;
+/* Custom SysMenu */
+#custom-sysmenu {
+  background-color: @red;
+  color: @dark;
+  padding: 1px 8px;
+  margin-right: 10px;
+  border: solid 1px;
+  border-radius: 10px;
+  border-color: #eb4d4b;
 }
 
-#taskbar button {
-    margin-top: 0px;
-    margin-bottom: 0px;
+#idle_inhibitor {
+  background-color: @surface1;
+  color: #ffffff;
+  padding: 1px 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 3px;
+  margin-right: 0px;
+  border-radius: 10px 0px 0px 10px;
+  border-style: solid;
+  border-width: 1px 0px 1px 1px;
+  border-color: @surface2;
 }
 
-#taskbar button.active {
-    background: #332E41;
-    margin-top: 0px;
-    margin-bottom: 0px;
+#custom-swaylock {
+  background-color: @surface1;
+  color: #ffffff;
+  padding: 1px 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-style: solid;
+  border-width: 1px 0px 1px 0px;
+  border-color: @surface2;
 }
 
-#custom-separator {
-  color: #1B5E20;
-  margin: 0 5px;
+#custom-gammastep {
+  background-color: @surface1;
+  padding: 1px 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 0px;
+  margin-right: 3px;
+  border-radius: 0px 10px 10px 0px;
+  border-style: solid;
+  border-width: 1px 1px 1px 0px;
+  border-color: @surface2;
 }
 
-@define-color col_border_solid rgba(120, 120, 120, 1);
-@define-color col_border_trans rgba(120, 120, 120, 0);
-
-#waybar > box:nth-child(2) > box:nth-child(3) > * > label {
-  padding: 0 10px;
+#memory {
+  background-color: @surface1;
+  color: #cccccc;
+  margin-left: 2px;
+  border: solid 1px;
+  border-radius: 10px;
+  border-color: @surface2;
 }
 
-#pulseaudio {
-	background-image:
-		linear-gradient(@col_border_solid 65%, @col_border_solid 55%)
-	;
-	background-size:1px 60%;
-	background-position:0 50%;
-	background-repeat:no-repeat;
+#custom-notifications {
+  background-color: @surface1;
+  margin: 5px;
+  padding: 5px;
+  border: solid 1px;
+  border-radius: 10px;
+  border-color: @surface2;
+}
+
+#custom-updates {
+  background-color: @surface1;
+  margin: 5px;
+  margin-right: 2px;
+  padding: 5px;
+  border: solid 1px;
+  border-radius: 10px;
+  border-color: @surface2;
 }
