Add cava on waybar

--- a/.config/gtklock/style.css
+++ b/.config/gtklock/style.css
@@ -1,5 +1,5 @@
 window {
-   background-image: url("/mnt/Data/Pictures/Sfondi/gruv.png");
+   background-image: url("Lock.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
