--- a/.config/hypr/component/waybar/style.css
+++ b/.config/hypr/component/waybar/style.css
@@ -60,7 +60,7 @@
 @define-color status #a6e3a1;
 @define-color date #f9e2af;
 @define-color slider_trough #1e1e2e;
-@define-color slider_highlight #c53b53;
+@define-color slider_highlight #ff007c;
 @define-color cava #332E41;
 @define-color cava_fg #cba6f7;
 @define-color network_fg @bg;
